# cmakeDemo

./: README.md
CmakeDemo/: CMakeLists.txt  library.cpp  library.h
ConsoleDemo/: CMakeLists.txt  library.h  main.cpp
